# slurmrestspawner

./: .gitignore  jupyterhub_config.py  pyproject.toml
slurmrestspawner/: default_job_script.j2  default_options_form.j2  slurmrestspawner.py
