[tool.poetry]
name = "slurmrestspawner"
version = "0.1.0"
description = ""
authors = ["Tristan Le Toullec <tristan.le.toullec@ifremer.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterhub = "^5.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
